added handlers to img crop area

--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
         <div class="kropper-container">
             <div class="kropper-shadowboard"></div>
             <div class="kropper-clipboard"></div>
+            <div class="kropper-handle kropper-handle-left-top"></div>
+            <div class="kropper-handle kropper-handle-left-middle"></div>
+            <div class="kropper-handle kropper-handle-left-bottom"></div>
+            <div class="kropper-handle kropper-handle-bottom-middle"></div>
+            <div class="kropper-handle kropper-handle-bottom-right"></div>
+            <div class="kropper-handle kropper-handle-right-middle"></div>
+            <div class="kropper-handle kropper-handle-right-top"></div>
+            <div class="kropper-handle kropper-handle-top-middle"></div>
+
         </div>
+    </div>
+
+    <div>
+        <button id="random-img">Load Random Image</button>
     </div>
 
     <script src="js/kropper.js"></script>
