--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div style="border: 1px solid black; padding: .5em;">
         <div class="kropper-container">
             <div class="kropper-shadowboard"></div>
-            <div class="kropper-clipboard"></div>
-            <div class="kropper-handle kropper-handle-left-top"></div>
-            <div class="kropper-handle kropper-handle-left-middle"></div>
-            <div class="kropper-handle kropper-handle-left-bottom"></div>
-            <div class="kropper-handle kropper-handle-bottom-middle"></div>
-            <div class="kropper-handle kropper-handle-bottom-right"></div>
-            <div class="kropper-handle kropper-handle-right-middle"></div>
-            <div class="kropper-handle kropper-handle-right-top"></div>
-            <div class="kropper-handle kropper-handle-top-middle"></div>
+            <div class="kropper-clipboard" style="clip-path: inset(16px 16px 16px 16px);"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-left-top"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-left-middle"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-left-bottom"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-bottom-middle"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-bottom-right"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-right-middle"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-right-top"></div>
+            <div draggable="true" class="kropper-handle kropper-handle-top-middle"></div>
 
         </div>
     </div>
