creating kropper inner html elements dynamically

--- a/index.html
+++ b/index.html
@@ -10,19 +10,7 @@
 <body>
     
     <div style="border: 1px solid black; padding: .5em;">
-        <div class="kropper-container">
-            <div class="kropper-shadowboard"></div>
-            <div class="kropper-clipboard" style="clip-path: inset(16px 16px 16px 16px);"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-left-top"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-left-middle"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-left-bottom"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-bottom-middle"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-bottom-right"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-right-middle"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-right-top"></div>
-            <div draggable="true" class="kropper-handle kropper-handle-top-middle"></div>
-
-        </div>
+        <div class="kropper-container"></div>
     </div>
 
     <div>
