--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         <div class="kropper-container"></div>
     </div>
 
-    <div>
+    <div style="margin-top: 4em;">
         <button id="random-img">Load Random Image</button>
+        <button id="get-result">Show Crop Result</button>
+        <img src="" alt="crop result image" id="crop-result-img">
     </div>
 
     <script src="js/kropper.js"></script>
