--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div style="border: 1px solid black; padding: .5em;">
+    <div style="border: 1px solid black; padding: .5em; margin: 1em;">
         <div class="kropper-container"></div>
     </div>
 
